# corgi

./: .gitignore  Makefile.am  README  README.rst  autogen.sh  configure  configure.ac  index.html  run_tests  wscript
doc/: Makefile  conf.py
include/: corgi.h
src/: Makefile.am  corgi.c  main.c  unicode.c  wscript
tests/: Makefile.am  rc  test-corgi.c  test_000  test_boundary040  test_boundary050  test_boundary060  test_boundary080  test_boundary140  test_boundary150  test_branch000  test_branch010  test_branch020  test_charset000  test_charset010  test_charset020  test_charset030  test_decimal000  test_decimal010  test_group010  test_literal000  test_nondecimal000  test_nondecimal010  test_nonwhitespace000  test_nonwhitespace010  test_nonword000  test_nonword010  test_nonword_boundary000  test_nonword_boundary010  test_repeat030  test_search010  test_whitespace000  test_whitespace010  test_word000  test_word010  test_word_boundary000  test_word_boundary010
